# sheep-classification-challenge

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
configs/: config.yml  mkdocs.yml  model.yml  paths.yml
data/processed/: clustered_test_results.csv  final_submission.csv  final_submission_with_confidence.csv  initial_submission.csv  initial_submission_with_confidence.csv  pseudo_clustered_merged.csv  pseudo_labels.csv
docs/: index.md  method.md
models/: cv_fold_scores.npy  pseudo_fold_scores.npy
notebook/: vit_clip_training.ipynb
output/: submission.csv  submission_with_confidence.csv  training_history.yml
output/models/: class_mappings.json
output/results/: classification_report.txt
results/: submission.csv  submission_with_confidence.csv
results/final_results/fold_1/: fold_1_confusion_matrix.txt  fold_1_report.txt  history_fold_1.csv
results/final_results/fold_2/: fold_2_confusion_matrix.txt  fold_2_report.txt  history_fold_2.csv
results/final_results/fold_3/: fold_3_confusion_matrix.txt  fold_3_report.txt  history_fold_3.csv
results/final_results/fold_4/: fold_4_confusion_matrix.txt  fold_4_report.txt  history_fold_4.csv
results/final_results/fold_5/: fold_5_confusion_matrix.txt  fold_5_report.txt  history_fold_5.csv
results/initial_results/fold_1/: fold_1_confusion_matrix.txt  fold_1_report.txt  history_fold_1.csv
results/initial_results/fold_2/: fold_2_confusion_matrix.txt  fold_2_report.txt  history_fold_2.csv
results/initial_results/fold_3/: fold_3_confusion_matrix.txt  fold_3_report.txt  history_fold_3.csv
results/initial_results/fold_4/: fold_4_confusion_matrix.txt  fold_4_report.txt  history_fold_4.csv
results/initial_results/fold_5/: fold_5_confusion_matrix.txt  fold_5_report.txt  history_fold_5.csv
scripts/: download_dataset.sh  full_train.py  predict.py  submit.sh  train.py  train_cv.py  train_vit_clip.py
search/: search_index.json
src/: __init__.py
src/data/: __init__.py  albumentations_utils.py  collators.py  dataset.py  pseudo_labeling.py  transforms.py
src/modeling/: __init__.py  classifier.py  clustering.py  ensemble.py  evaluation.py  feature_extraction.py  helpers.py  losses.py  metrics.py  optimizers.py  predict.py  train.py  train_eval.py  training_utils.py  vit_clip_fusion.py
src/utils/: __init__.py  config.py  data_utils.py  helpers.py  logger.py  pseudo_labeling.py  visualization.py
