[project]
name = "sheep-classification-challenge"
description = "A deep learning solution for classifying sheep breeds with semi-supervised learning"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"

dependencies = [
    "albumentations>=2.0.8",
    "hdbscan>=0.8.40",
    "matplotlib>=3.10.3",
    "numpy==2.2",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "timm>=1.0.15",
    "torch>=2.7.1",
    "umap-learn>=0.5.7",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ipython",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-coverage",
    "types-PyYAML",
    "kaggle", # Kaggle API
    "ipykernel" # Jupyter Notebooks
]

[tool.pydoclint]
style = "sphinx"
exclude = "test_"
allow-init-docstring = true
arg-type-hints-in-docstring = false
check-return-types = false
require-return-section-when-returning-nothing = false

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools]
packages = ["src"]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.setuptools.dynamic]
version = {attr = "src.version.__version__"}
